--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
-  <meta name="og:title" content="Scorpions Legion">
+  <meta name="og:title" content="Scorpions Legion - CS2 Community">
+  <meta property="og:description" content="" data-react-helmet="true">
+    <meta property="og:locale" content="en" data-react-helmet="true">
+    <meta property="og:site_name" content="Scorpions Legion - CS2 Community" data-react-helmet="true">
   <meta name="author" content="Scorpions Legion"/>
-  <link rel="apple-touch-icon" sizes="57x57" href="./src/assets/logo-57x57.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/logo-180x180.svg">
-    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/logo-16x16.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/logo-32x32.svg">
+  <link rel="apple-touch-icon" sizes="57x57" href="/src/assets/logo-57x57.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/logo-180x180.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/logo-16x16.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/logo-32x32.svg">
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi."/>
   <meta name="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
   <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi"/>
