--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta property="og:description" content="" data-react-helmet="true">
     <meta property="og:locale" content="en" data-react-helmet="true">
     <meta property="og:site_name" content="Scorpions Legion - CS2 Community" data-react-helmet="true">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://scorpionslegion.netlify.app/">
   <meta name="author" content="Scorpions Legion"/>
   <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo-57x57.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo-180x180.svg">
