--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo-180x180.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo-16x16.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo-32x32.svg">
-    <link rel="icon" href="src/assets/logo-128x128.svg">
+    <link rel="icon" type="image/png" sizes="128x128" href="src/assets/logo-128x128.svg">
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi."/>
   <meta name="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
   <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi"/>
