--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo-16x16.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo-32x32.svg">
     <link rel="icon" type="image/png" sizes="128x128" href="src/assets/logo-128x128.svg">
+    <meta property="image" content="src/assets/logo-128x128.svg">
   <meta property="og:image" content="src/assets/logo-128x128.svg"/>
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi."/>
   <meta name="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
