--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
   <meta property="og:description" content="" data-react-helmet="true">
-  <meta property="image" content="src/assets/logo-128x128.svg">
-  <meta property="og:image" content="src/assets/logo-128x128.svg"/>
+  <meta property="og:image" content="https://static.vecteezy.com/system/resources/thumbnails/006/899/230/small/mystery-random-loot-box-from-game-icon-vector.jpg"/>
     <meta property="og:locale" content="en" data-react-helmet="true">
     <meta property="og:site_name" content="Scorpions Legion - CS2 Community" data-react-helmet="true">
     <meta property="og:type" content="website">
