--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
-  <meta name="image" content="https://static.vecteezy.com/system/resources/thumbnails/006/899/230/small/mystery-random-loot-box-from-game-icon-vector.jpg"/>
+  <meta name="og:image" content="https://static.vecteezy.com/system/resources/thumbnails/006/899/230/small/mystery-random-loot-box-from-game-icon-vector.jpg"/>
   <meta name="author" content="Scorpions Legion"/>
   <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo-57x57.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo-180x180.svg">
