--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
-  <meta name="og:image" content="https://static.vecteezy.com/system/resources/thumbnails/006/899/230/small/mystery-random-loot-box-from-game-icon-vector.jpg"/>
   <meta name="author" content="Scorpions Legion"/>
   <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo-57x57.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo-180x180.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo-16x16.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo-32x32.svg">
-    <link rel="icon" type="image/png" sizes="128x128" href="src/assets/logo-128x128.svg">
+    <meta property="og:image" content="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg"/>
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi."/>
   <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi"/>
 </head>
