--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="apple-touch-icon" sizes="57x57" href="https://scorpionslegion.netlify.app/src/assets/logo-57x57.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://scorpionslegion.netlify.app/src/assets/logo-16x16.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://scorpionslegion.netlify.app/src/assets/logo-32x32.svg">
-  <meta property="og:image" content="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg"/>
+  <link rel="apple-touch-icon" sizes="57x57" href="https://scorpionslegion.netlify.app/src/assets/logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://scorpionslegion.netlify.app/src/assets/logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://scorpionslegion.netlify.app/src/assets/logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://scorpionslegion.netlify.app/src/assets/logo.png">
   <title>Scorpions Legion - CS2 Community</title>
   <meta name="google-site-verification" content="xjrgEAIahNnbJvJhGo3vecnHFKkKHJriztZfJm5eK_I" />
   <link rel="canonical" href="https://scorpionslegion.netlify.app"/>
