--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link data-default-icon="https://scorpionslegion.netlify.app/src/assets/logo-57x57.svg" rel="icon" sizes="180x180" href="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg">
+  <link data-default-icon="https://scorpionslegion.netlify.app/src/assets/logo-57x57.svg" rel="icon" sizes="180x180" href="src/assets/logo-180x180.svg">
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
