--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 <html lang="en">
 
 <head>
-  <link data-default-icon="https://scorpionslegion.netlify.app/src/assets/logo-57x57.svg" rel="icon" sizes="180x180" href="./src/assets/logo-180x180.svg">
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="apple-touch-icon" sizes="57x57" href="https://scorpionslegion.netlify.app/src/assets/logo-57x57.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://scorpionslegion.netlify.app/src/assets/logo-16x16.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://scorpionslegion.netlify.app/src/assets/logo-32x32.svg">
+  <link rel="icon" href="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg" />
   <title>Scorpions Legion - CS2 Community</title>
   <meta name="google-site-verification" content="xjrgEAIahNnbJvJhGo3vecnHFKkKHJriztZfJm5eK_I" />
-  <link rel="canonical" href="https://scorpionslegion.netlify.app"/>
+  <link rel="canonical" href="https://scorpionslegion.netlify.app" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
-  <meta name="og:title" content="Scorpions Legion - CS2 Community">
-  <meta name="author" content="Scorpions Legion"/>
-  <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi."/>
-  <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi"/>
+  <meta property="og:title" content="Scorpions Legion - CS2 Community">
+  <meta property="og:description" content="Discord Server za CS2 igrače, za igranje, pričanje i druženje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
+  <meta property="og:image" content="https://scorpionslegion.netlify.app/src/assets/logo-180x180.svg" />
+  <meta name="author" content="Scorpions Legion" />
+  <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi" />
 </head>
 
 <body class="bg-[#141414] font-TitilliumWeb">
