--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo-57x57.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo-180x180.svg">
-  <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo-16x16.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo-32x32.svg">
+  <link rel="apple-touch-icon" sizes="57x57" href="./src/assets/logo57x57.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/logo180x180.svg">
+  <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/logo16x16.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/logo32x32.svg">
   <title>Scorpions Legion - CS2 Community</title>
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
   <meta property="og:site_name" content="Scorpions Legion - CS2 Community" data-react-helmet="true">
