--- a/index.html
+++ b/index.html
@@ -2,29 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#000">
-  <meta property="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi." data-react-helmet="true">
-  <meta property="og:locale" content="rs" data-react-helmet="true">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo57x57.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo180x180.svg">
-  <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo16x16.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo32x32.svg">
-  <meta property="og:image" content="src/assets/logo128x128.svg"/>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="/vite.svg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scorpions Legion - CS2 Community</title>
+  <meta name="google-site-verification" content="xjrgEAIahNnbJvJhGo3vecnHFKkKHJriztZfJm5eK_I">
+  <link rel="canonical" href="https://scorpionslegion.netlify.app">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&amp;display=swap" rel="stylesheet">
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
-  <meta property="og:site_name" content="Scorpions Legion - CS2 Community" data-react-helmet="true">
+  <meta property="og:image" content="src/assets/logo180x180.svg">
+  <meta name="author" content="Scorpions Legion">
+  <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo57x57.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo180x180.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo16x16.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo32x32.svg">
+    <link rel="icon" type="image/png" sizes="128x128" href="src/assets/logo128x128.svg">
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
-  <link rel="canonical" href="https://scorpionslegion.netlify.app"/>
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://scorpionslegion.netlify.app">
-  <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi"/>
-  <meta name="google-site-verification" content="xjrgEAIahNnbJvJhGo3vecnHFKkKHJriztZfJm5eK_I"/>
-  <meta name="author" content="Scorpions Legion"/> 
+  <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi">
 </head>
 
 <body class="bg-[#141414] font-TitilliumWeb">
