--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
   <meta property="og:image" content="src/assets/logo180x180.svg">
   <meta name="author" content="Scorpions Legion">
-  <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo57x57.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo180x180.svg">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo16x16.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo32x32.svg">
-    <link rel="icon" type="image/png" sizes="128x128" href="src/assets/logo128x128.svg">
+  <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo57x57.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo180x180.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/logo16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/logo32x32.png">
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
+  <meta property="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
   <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi">
 </head>
 
