--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&amp;display=swap" rel="stylesheet">
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
-  <meta property="og:image" content="src/assets/logo180x180.svg">
+  <meta property="og:image" content="src/assets/logo180x180.png">
   <meta name="author" content="Scorpions Legion">
   <link rel="apple-touch-icon" sizes="57x57" href="src/assets/logo57x57.png">
     <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo180x180.png">
