--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&amp;display=swap" rel="stylesheet">
   <meta name="og:title" content="Scorpions Legion - CS2 Community">
   <meta property="twitter:title" content="Scorpions Legion - CS2 Community">
-  <meta property="og:image" content="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
+  <meta property="og:image" content="https://res.cloudinary.com/dtn85o6up/image/upload/v1697574330/legion_2_jvhi5a.png">
   <meta name="twitter:image" content="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
   <link rel="image_src" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
   <meta name="author" content="Scorpions Legion">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572308/logo57x57_n71yjb.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572158/logo180x180_rws9ka.png">
-  <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
-  <meta property="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
-  <meta property="twitter:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, givavejevi, CS2 rolovi.">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572339/logo16x16_zoymgi.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572317/logo32x32_gxwjxp.png">
+  <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, giveaway, CS2 rolovi.">
+  <meta property="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, giveaway, CS2 rolovi.">
+  <meta property="twitter:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, giveaway, CS2 rolovi.">
   <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi">
 </head>
 
