--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dtn85o6up/image/upload/v1697572317/logo32x32_gxwjxp.png">
   <meta name="description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, giveaway, CS2 rolovi.">
   <meta property="og:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, giveaway, CS2 rolovi.">
-  <meta property="twitter:description" content="Grupa je Napravljena 21.07.2022 Grupa je za druzenje i za CS2. Posetite Nas Diskord Server Na serveru se odrzava povremeno fastcup. Na serveru ima pravljenje sobe i editovanje iste sobe. 👇 https://discord.gg/B8yGxfpC ✩ 𝗦𝗰𝗼𝗿𝗽𝗶𝗼𝗻𝘀 𝗟𝗲𝗴𝗶𝗼𝗻 ✩">
+  <meta property="twitter:description" content="Discord Server za CS2 igrace, za igranje, pricanje i druzenje. Self rolovi, ekonomija, giveaway, CS2 rolovi.">
   <meta name="keywords" content="Discord, CS2, server, online, zajednica, komunikacija, gaming, cs2-rolovi">
 </head>
 
