--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body class="bg-[#141414] font-TitilliumWeb">
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/main.jsx"></script>
 </body>
 
 </html>
